# Media_Upload_Service

./: CMakeLists.txt  ModuleInterface.cpp  README.md
DecodingImageCode/: imageprocessor.cpp  imageprocessor.hpp
inc/: Message_formatter_lpr.hpp  media_upload_service.hpp  transactionLogs.hpp
src/: media_upload_service.cpp  transactionLogs.cpp
